# Elasticity

./: .gitignore  C0_triangles.hpp  README.md  add_traction_force.cpp  assemble_stiffness_1_double.cpp  assemble_stiffness_1_vector.cpp  assemble_stiffness_2_double.cpp  assemble_stiffness_2_vector.cpp  assemble_stiffness_3_double.cpp  assemble_stiffness_3_vector.cpp  assemble_stiffness_4_double.cpp  assemble_stiffness_4_vector.cpp  convert_mesh.cpp  convert_to_eigen.hpp  elasticity.hpp  fill_internal_coordinates.cpp  get_triangles.hpp  impose_dirichlet_condition.hpp  impose_dirichlet_condition_1.cpp  impose_dirichlet_condition_2.cpp  impose_dirichlet_condition_3.cpp  impose_dirichlet_condition_4.cpp  impose_homogeneous.cpp  integrate_error.cpp  integrate_traction_force.hpp  integrate_traction_force_1.cpp  integrate_traction_force_2.cpp  integrate_traction_force_3.cpp  integrate_traction_force_4.cpp  integrate_volume_force.hpp  integrate_volume_force_1.cpp  integrate_volume_force_2.cpp  integrate_volume_force_3.cpp  integrate_volume_force_4.cpp  mass_matrix.hpp  mass_matrix_1.cpp  mass_matrix_2.cpp  mass_matrix_3.cpp  mass_matrix_4.cpp  mesh_diagnostics.hpp  (+13 more)
subprojects/: Eigen.wrap  Galerkin.wrap  SmallVector.wrap  SymSparse.wrap  TetMesh.wrap
validation/: manufactured.cpp  meson.build  validation_0.025.geo  validation_0.2.geo
